--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
+        "start": "ng serve --proxy-config ./proxy.json",
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
-        "e2e": "ng e2e"
+        "e2e": "ng e2e",
+        "server": "./node_modules/.bin/ts-node -P ./server/server.tsconfig.json ./server/server.ts"
     },
     "private": true,
     "dependencies": {
