--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngrx/router-store": "^10.1.0",
     "@ngrx/store": "^10.0.1",
     "@ngrx/store-devtools": "^10.0.1",
+    "jasmine-marbles": "^0.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
